--- a/public/css/app.css
+++ b/public/css/app.css
@@ -726,6 +726,9 @@ select {
 .relative {
   position: relative;
 }
+.bottom-2 {
+  bottom: 0.5rem;
+}
 .left-0 {
   left: 0px;
 }
@@ -734,12 +737,6 @@ select {
 }
 .top-0 {
   top: 0px;
-}
-.bottom-0 {
-  bottom: 0px;
-}
-.bottom-2 {
-  bottom: 0.5rem;
 }
 .z-0 {
   z-index: 0;
@@ -753,31 +750,13 @@ select {
 .m-2 {
   margin: 0.5rem;
 }
-.m-0 {
-  margin: 0px;
-}
-.m-8 {
-  margin: 2rem;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-.-mx-2 {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -809,6 +788,27 @@ select {
 .ml-4 {
   margin-left: 1rem;
 }
+.ml-0 {
+  margin-left: 0px;
+}
+.mt-0 {
+  margin-top: 0px;
+}
+.mr-8 {
+  margin-right: 2rem;
+}
+.mr-10 {
+  margin-right: 2.5rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
+.-mt-2 {
+  margin-top: -0.5rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -830,33 +830,6 @@ select {
 .mt-10 {
   margin-top: 2.5rem;
 }
-.mr-4 {
-  margin-right: 1rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mt-0 {
-  margin-top: 0px;
-}
-.ml-auto {
-  margin-left: auto;
-}
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.ml-0 {
-  margin-left: 0px;
-}
-.-mt-2 {
-  margin-top: -0.5rem;
-}
-.mr-8 {
-  margin-right: 2rem;
-}
-.mr-10 {
-  margin-right: 2.5rem;
-}
 .block {
   display: block;
 }
@@ -871,12 +844,6 @@ select {
 }
 .table {
   display: table;
-}
-.table-cell {
-  display: table-cell;
-}
-.table-row {
-  display: table-row;
 }
 .grid {
   display: grid;
@@ -911,9 +878,6 @@ select {
 .h-screen {
   height: 100vh;
 }
-.h-32 {
-  height: 8rem;
-}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -941,6 +905,18 @@ select {
 .w-6 {
   width: 1.5rem;
 }
+.w-3\/4 {
+  width: 75%;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.w-2\/5 {
+  width: 40%;
+}
+.w-8 {
+  width: 2rem;
+}
 .w-1\/2 {
   width: 50%;
 }
@@ -950,35 +926,32 @@ select {
 .w-2\/4 {
   width: 50%;
 }
-.w-8 {
-  width: 2rem;
-}
 .w-screen {
   width: 100vw;
 }
 .w-10 {
   width: 2.5rem;
 }
-.w-1\/4 {
-  width: 25%;
-}
-.w-3\/4 {
-  width: 75%;
-}
-.w-1\/6 {
-  width: 16.666667%;
-}
-.w-1\/5 {
-  width: 20%;
-}
-.w-2\/5 {
-  width: 40%;
-}
 .w-2\/3 {
   width: 66.666667%;
 }
+.w-4\/5 {
+  width: 80%;
+}
+.w-3\/5 {
+  width: 60%;
+}
 .w-1\/3 {
   width: 33.333333%;
+}
+.w-5\/12 {
+  width: 41.666667%;
+}
+.w-5\/6 {
+  width: 83.333333%;
+}
+.w-11\/12 {
+  width: 91.666667%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1026,9 +999,6 @@ select {
 .cursor-pointer {
   cursor: pointer;
 }
-.resize-none {
-  resize: none;
-}
 .list-inside {
   list-style-position: inside;
 }
@@ -1041,9 +1011,6 @@ select {
 .flex-row {
   flex-direction: row;
 }
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
 .flex-col {
   flex-direction: column;
 }
@@ -1052,9 +1019,6 @@ select {
 }
 .items-center {
   align-items: center;
-}
-.justify-start {
-  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
@@ -1173,9 +1137,6 @@ select {
 .border-r {
   border-right-width: 1px;
 }
-.border-t-2 {
-  border-top-width: 2px;
-}
 .border-solid {
   border-style: solid;
 }
@@ -1191,20 +1152,16 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
 .border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
 }
 .border-transparent {
   border-color: transparent;
-}
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1230,10 +1187,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
 .bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
@@ -1257,14 +1210,6 @@ select {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1363,23 +1308,11 @@ select {
 .pl-0 {
   padding-left: 0px;
 }
-.pt-12 {
-  padding-top: 3rem;
-}
-.pt-14 {
-  padding-top: 3.5rem;
-}
 .text-left {
   text-align: left;
 }
 .text-center {
   text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.align-bottom {
-  vertical-align: bottom;
 }
 .align-text-bottom {
   vertical-align: text-bottom;
@@ -1434,9 +1367,6 @@ select {
 }
 .leading-8 {
   line-height: 2rem;
-}
-.leading-6 {
-  line-height: 1.5rem;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
@@ -1641,10 +1571,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.hover\:bg-blue-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
 .hover\:bg-gray-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -1660,10 +1586,6 @@ select {
 .hover\:bg-teal-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
-}
-.hover\:bg-red-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 .hover\:text-base:hover {
   font-size: 1rem;
@@ -1712,6 +1634,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
+.focus\:border-indigo-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
 .focus\:border-indigo-700:focus {
   --tw-border-opacity: 1;
   border-color: rgb(67 56 202 / var(--tw-border-opacity));
@@ -1719,10 +1645,6 @@ select {
 .focus\:border-gray-900:focus {
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
-}
-.focus\:border-indigo-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
 .focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
@@ -1859,6 +1781,18 @@ select {
     margin-left: 0px;
   }
 
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .sm\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1879,12 +1813,12 @@ select {
     width: 20%;
   }
 
-  .sm\:w-1\/3 {
-    width: 33.333333%;
+  .sm\:w-3\/5 {
+    width: 60%;
   }
 
-  .sm\:w-1\/4 {
-    width: 25%;
+  .sm\:w-5\/12 {
+    width: 41.666667%;
   }
 
   .sm\:max-w-md {
@@ -1960,14 +1894,6 @@ select {
 
   .md\:w-16 {
     width: 4rem;
-  }
-
-  .md\:w-1\/5 {
-    width: 20%;
-  }
-
-  .md\:w-1\/12 {
-    width: 8.333333%;
   }
 
   .md\:grid-cols-2 {
