--- a/public/css/app.css
+++ b/public/css/app.css
@@ -744,11 +744,11 @@ select {
 .z-50 {
   z-index: 50;
 }
-.-m-2 {
-  margin: -0.5rem;
-}
 .m-2 {
   margin: 0.5rem;
+}
+.-m-2 {
+  margin: -0.5rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -788,6 +788,9 @@ select {
 .ml-4 {
   margin-left: 1rem;
 }
+.mr-2 {
+  margin-right: 0.5rem;
+}
 .ml-0 {
   margin-left: 0px;
 }
@@ -803,17 +806,14 @@ select {
 .mr-4 {
   margin-right: 1rem;
 }
+.mt-2 {
+  margin-top: 0.5rem;
+}
 .ml-auto {
   margin-left: auto;
 }
 .-mt-2 {
   margin-top: -0.5rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
-}
-.mr-2 {
-  margin-right: 0.5rem;
 }
 .mt-8 {
   margin-top: 2rem;
@@ -908,8 +908,11 @@ select {
 .w-3\/4 {
   width: 75%;
 }
-.w-1\/4 {
-  width: 25%;
+.w-10\/12 {
+  width: 83.333333%;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-2\/5 {
   width: 40%;
@@ -919,6 +922,9 @@ select {
 }
 .w-1\/2 {
   width: 50%;
+}
+.w-1\/4 {
+  width: 25%;
 }
 .w-48 {
   width: 12rem;
@@ -1170,6 +1176,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
@@ -1185,10 +1195,6 @@ select {
 .bg-sky-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(56 189 248 / var(--tw-bg-opacity));
-}
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-gray-800 {
   --tw-bg-opacity: 1;
@@ -1559,6 +1565,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1574,10 +1584,6 @@ select {
 .hover\:bg-teal-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
-}
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .hover\:text-base:hover {
   font-size: 1rem;
@@ -1793,6 +1799,18 @@ select {
     height: 5rem;
   }
 
+  .sm\:w-2\/5 {
+    width: 40%;
+  }
+
+  .sm\:w-1\/2 {
+    width: 50%;
+  }
+
+  .sm\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .sm\:w-1\/5 {
     width: 20%;
   }
@@ -1858,6 +1876,14 @@ select {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:w-9\/12 {
+    width: 75%;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:w-2\/3 {
