--- a/public/css/student/test/edit.css
+++ b/public/css/student/test/edit.css
@@ -9,7 +9,16 @@ button#addForm.hidden {
     display:none;
 }
 
+/* inputのエラー処理 */
+.error { display: none; }
 
+.error.invalid {
+    display: block;
+    color: red;
+}
+
+
+/* スピンボタンの削除 */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
