--- a/public/css/app.css
+++ b/public/css/app.css
@@ -791,6 +791,9 @@ select {
 .mr-2 {
   margin-right: 0.5rem;
 }
+.mt-2 {
+  margin-top: 0.5rem;
+}
 .ml-0 {
   margin-left: 0px;
 }
@@ -805,9 +808,6 @@ select {
 }
 .mr-4 {
   margin-right: 1rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
 }
 .ml-auto {
   margin-left: auto;
@@ -908,8 +908,8 @@ select {
 .w-3\/4 {
   width: 75%;
 }
-.w-10\/12 {
-  width: 83.333333%;
+.w-11\/12 {
+  width: 91.666667%;
 }
 .w-1\/3 {
   width: 33.333333%;
@@ -1803,6 +1803,10 @@ select {
     width: 40%;
   }
 
+  .sm\:w-5\/12 {
+    width: 41.666667%;
+  }
+
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -1880,10 +1884,6 @@ select {
 
   .md\:w-9\/12 {
     width: 75%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:w-2\/3 {
