--- a/public/css/student/test/edit.css
+++ b/public/css/student/test/edit.css
@@ -17,6 +17,10 @@ button#addForm.hidden {
     color: red;
 }
 
+.error.invalid {
+    display: block;
+    color: red;
+}
 
 /* スピンボタンの削除 */
 input[type="number"]::-webkit-outer-spin-button,
