--- a/public/css/app.css
+++ b/public/css/app.css
@@ -758,6 +758,10 @@ select {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -832,6 +836,9 @@ select {
 }
 .mt-10 {
   margin-top: 2.5rem;
+}
+.mr-16 {
+  margin-right: 4rem;
 }
 .block {
   display: block;
@@ -1374,6 +1381,9 @@ select {
 .tracking-widest {
   letter-spacing: 0.1em;
 }
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1540,6 +1550,9 @@ select {
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.first\:mb-2:first-child {
+  margin-bottom: 0.5rem;
 }
 .focus-within\:ring-2:focus-within {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1892,6 +1905,14 @@ select {
   }
 }
 @media (min-width: 768px) {
+
+  .md\:mr-16 {
+    margin-right: 4rem;
+  }
+
+  .md\:mr-8 {
+    margin-right: 2rem;
+  }
 
   .md\:block {
     display: block;
