--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.1.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.1.6 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -438,7 +438,8 @@ select {
   background-size: 1.5em 1.5em;
   padding-right: 2.5rem;
   -webkit-print-color-adjust: exact;
-          color-adjust: exact;
+     color-adjust: exact;
+          print-color-adjust: exact;
 }
 
 [multiple] {
@@ -448,7 +449,8 @@ select {
   background-size: initial;
   padding-right: 0.75rem;
   -webkit-print-color-adjust: unset;
-          color-adjust: unset;
+     color-adjust: unset;
+          print-color-adjust: unset;
 }
 
 [type='checkbox'],[type='radio'] {
@@ -457,7 +459,8 @@ select {
           appearance: none;
   padding: 0;
   -webkit-print-color-adjust: exact;
-          color-adjust: exact;
+     color-adjust: exact;
+          print-color-adjust: exact;
   display: inline-block;
   vertical-align: middle;
   background-origin: border-box;
@@ -541,6 +544,7 @@ select {
 }
 
 [type='file']:focus {
+  outline: 1px solid ButtonText;
   outline: 1px auto -webkit-focus-ring-color;
 }
 
@@ -819,8 +823,8 @@ select {
 .-mt-2 {
   margin-top: -0.5rem;
 }
-.mr-0 {
-  margin-right: 0px;
+.mr-16 {
+  margin-right: 4rem;
 }
 .mt-8 {
   margin-top: 2rem;
@@ -834,11 +838,11 @@ select {
 .mt-6 {
   margin-top: 1.5rem;
 }
+.mr-0 {
+  margin-right: 0px;
+}
 .mt-10 {
   margin-top: 2.5rem;
-}
-.mr-16 {
-  margin-right: 4rem;
 }
 .block {
   display: block;
@@ -1381,9 +1385,6 @@ select {
 .tracking-widest {
   letter-spacing: 0.1em;
 }
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1905,10 +1906,6 @@ select {
   }
 }
 @media (min-width: 768px) {
-
-  .md\:mr-16 {
-    margin-right: 4rem;
-  }
 
   .md\:mr-8 {
     margin-right: 2rem;
